# tboggle

./: .gitignore  CLAUDE.md  Makefile  TODO.md  benchmark_heuristics  benchmark_heuristics.c  boggle.py  chooser.py  ctest.c  fill.py  game.py  libwords.c  libwords.md  package-lock.json  play.py  pyproject.toml  setup.py  styles.css  test_backend.py  test_extreme  test_extreme_constraints.c  test_heuristics  test_heuristics.c  test_libwords  test_libwords.c  test_libwords_old  test_libwords_standalone  tree.c  words.c
src/tboggle/: backend.py  boggle.py  chooser.py  demo_client.py  dice.py  exit_modal.py  game.py  libwords.c  lookup_modal.py  pause_modal.py  styles.css
