[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tboggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyinstaller>=6.14.1",
    "textual>=3.3.0",
    "textual-dev>=1.7.0",
]

[project.scripts]
tboggle = "tboggle.boggle:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tboggle = ["*.sqlite3", "*.dat", "*.so", "*.css"]
